attempting fix to height issue on mobile

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h1 {
 
 .content {
     background-color: white;
-    height: 100vh;
+    min-height: 100vh;
     width: fit-content;
     margin-inline: auto;
     padding: 2ch;
